codechef/compiling_error.txt
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:4:5: error: use of undeclared identifier 'cin'; did you mean 'std::cin'?
    cin>>t;
    ^~~
    std::cin
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iostream:50:33: note: 'std::cin' declared here
extern _LIBCPP_FUNC_VIS istream cin;
                                ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:7:9: error: use of undeclared identifier 'cin'; did you mean 'std::cin'?
        cin>>n;
        ^~~
        std::cin
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iostream:50:33: note: 'std::cin' declared here
extern _LIBCPP_FUNC_VIS istream cin;
                                ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:7:14: error: use of undeclared identifier 'n'
        cin>>n;
             ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:8:23: error: use of undeclared identifier 'n'
        for(int i=0;i<n;i++){
                      ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:9:13: error: use of undeclared identifier 'cin'; did you mean 'std::cin'?
            cin>>score[i];
            ^~~
            std::cin
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iostream:50:33: note: 'std::cin' declared here
extern _LIBCPP_FUNC_VIS istream cin;
                                ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:9:18: error: use of undeclared identifier 'score'
            cin>>score[i];
                 ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:10:13: error: use of undeclared identifier 'initialize_zero'
            initialize_zero(type,i);
            ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:11:27: error: use of undeclared identifier 'score'
            for(int j=0;j<score[i];j++){
                          ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:12:17: error: use of undeclared identifier 'cin'; did you mean 'std::cin'?
                cin>>cookie;
                ^~~
                std::cin
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iostream:50:33: note: 'std::cin' declared here
extern _LIBCPP_FUNC_VIS istream cin;
                                ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:12:22: error: use of undeclared identifier 'cookie'
                cin>>cookie;
                     ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:13:25: error: use of undeclared identifier 'cookie'
                type[i][cookie]++;
                        ^
/Users/mitz/Documents/git/codeforlife/codechef/sept16_RESCALC.cpp:21:21: error: subscripted value is not an array, pointer, or vector
        type[player][i]=0;
        ~~~~~~~~~~~~^~
12 errors generated.
